add Alamofire and SwiftyJSON into project folder

--- a/NewShare/Base.lproj/Main.storyboard
+++ b/NewShare/Base.lproj/Main.storyboard
@@ -87,7 +87,51 @@
                     <view key="view" contentMode="scaleToFill" id="nBf-dZ-3pH">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="98" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dKg-3d-zKy">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="98" id="9TM-N5-GKi">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9TM-N5-GKi" id="Xv4-fQ-EQn">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V24-ic-3oR">
+                                                    <rect key="frame" x="8" y="68" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfq-ta-xJp">
+                                                    <rect key="frame" x="550" y="68" width="49" height="21"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Summary" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06q-hb-NRd">
+                                                    <rect key="frame" x="8" y="8" width="584" height="52"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="6JA-S9-wC4" id="PIj-ts-EKO"/>
+                                    <outlet property="delegate" destination="6JA-S9-wC4" id="Bbn-xo-tXx"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dKg-3d-zKy" firstAttribute="leading" secondItem="nBf-dZ-3pH" secondAttribute="leading" id="2R3-NK-nle"/>
+                            <constraint firstItem="dKg-3d-zKy" firstAttribute="top" secondItem="nBf-dZ-3pH" secondAttribute="top" id="I8V-jK-8K7"/>
+                            <constraint firstItem="dKg-3d-zKy" firstAttribute="bottom" secondItem="50h-mQ-5Wd" secondAttribute="top" id="egT-l2-QOB"/>
+                            <constraint firstAttribute="trailing" secondItem="dKg-3d-zKy" secondAttribute="trailing" id="yOt-wp-5nx"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="0LZ-mL-Xqy" kind="show" identifier="DetailEvent" id="Nzw-5V-aiZ"/>
