--- a/NewShare/Base.lproj/Main.storyboard
+++ b/NewShare/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -79,7 +80,7 @@
         <!--CalendarEventsView Controller-->
         <scene sceneID="ew0-7a-yFf">
             <objects>
-                <viewController id="6JA-S9-wC4" userLabel="CalendarEventsView Controller" sceneMemberID="viewController">
+                <viewController id="6JA-S9-wC4" userLabel="CalendarEventsView Controller" customClass="CalendarEventViewController" customModule="NewShare" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="02S-Zj-scS"/>
                         <viewControllerLayoutGuide type="bottom" id="50h-mQ-5Wd"/>
@@ -92,30 +93,40 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="98" id="9TM-N5-GKi">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCell" rowHeight="98" id="9TM-N5-GKi">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9TM-N5-GKi" id="Xv4-fQ-EQn">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V24-ic-3oR">
-                                                    <rect key="frame" x="8" y="68" width="42" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V24-ic-3oR">
+                                                    <rect key="frame" x="8" y="74" width="26" height="15"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfq-ta-xJp">
-                                                    <rect key="frame" x="550" y="68" width="49" height="21"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Summary" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06q-hb-NRd">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06q-hb-NRd">
                                                     <rect key="frame" x="8" y="8" width="584" height="52"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfq-ta-xJp">
+                                                    <rect key="frame" x="543" y="74" width="49" height="15"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="06q-hb-NRd" secondAttribute="bottom" constant="29" id="CL2-cW-mFF"/>
+                                                <constraint firstItem="06q-hb-NRd" firstAttribute="leading" secondItem="Xv4-fQ-EQn" secondAttribute="leadingMargin" id="HJZ-dh-mKO"/>
+                                                <constraint firstItem="06q-hb-NRd" firstAttribute="top" secondItem="Xv4-fQ-EQn" secondAttribute="topMargin" id="QNI-9a-AUg"/>
+                                                <constraint firstItem="V24-ic-3oR" firstAttribute="bottom" secondItem="Xv4-fQ-EQn" secondAttribute="bottomMargin" id="XGS-ep-eP7"/>
+                                                <constraint firstItem="V24-ic-3oR" firstAttribute="leading" secondItem="Xv4-fQ-EQn" secondAttribute="leadingMargin" id="c0U-V7-kUZ"/>
+                                                <constraint firstItem="06q-hb-NRd" firstAttribute="trailing" secondItem="Xv4-fQ-EQn" secondAttribute="trailingMargin" id="gX5-hi-uIq"/>
+                                                <constraint firstItem="gfq-ta-xJp" firstAttribute="bottom" secondItem="Xv4-fQ-EQn" secondAttribute="bottomMargin" id="h9W-0D-AnQ"/>
+                                                <constraint firstItem="gfq-ta-xJp" firstAttribute="trailing" secondItem="Xv4-fQ-EQn" secondAttribute="trailingMargin" id="kta-qJ-n4A"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
